<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Restaurant Menu</string>

    <string name="ui_tabname_appetizer">Appetizer</string>
    <string name="ui_tabname_entree">Entrée</string>
    <string name="ui_tabname_dessert">Dessert</string>

    <string name="soup">Generic Soup (5)</string>
    <string name="salad">Generic Salad (5)</string>
    <string name="bread">Generic Bread (3)</string>

    <string name="steak">Generic Steak (10)</string>
    <string name="chicken">Generic Chicken (8)</string>
    <string name="rice">Generic Rice (6)</string>

    <string name="icecream">Generic Ice Cream (5)</string>
    <string name="cake">Generic Cake (7)</string>
    <string name="pudding">Generic Pudding (3)</string>

</resources>
